--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     cursor: pointer;
 }
 .fa-twitter:hover,.fa-linkedin:hover, .fa-github:hover {
-    color: #008000;
+    color: #00006b;
 }
 .fab {
     color: #000000;
